--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>SAC | Projects</title>
 </head>
 <body>
-    <a href="/ba-south-play/"></a>
-    <a href="/ba-volleyball-center/"></a>
-    <a href="/calculator/"></a>
-    <a href="/chamber/"></a>
-    <a href="/cozumel-scoots/"></a>
-    <a href="/wwr/"></a>
+    <a href="/ba-south-play/">ba-south-play</a>
+    <a href="/ba-volleyball-center/">ba-volleyball-center</a>
+    <a href="/calculator/">calculator</a>
+    <a href="/chamber/">chamber</a>
+    <a href="/cozumel-scoots/">cozumel-scoots</a>
+    <a href="/wwr/">wwr</a>
 </body>
 </html>
